fixed all issues

--- a/Template_Structure/css/grid.css
+++ b/Template_Structure/css/grid.css
@@ -108,6 +108,39 @@
     }
 }
 
+@media(min-width:20em){
+       .grid-col-4of10-addcart{
+        width:80%;
+        
+    }
+
+    div.grid-col-4of10-addcart.save-chef{
+        margin-left:2em;
+        margin-bottom:1em;
+    }
+
+    .customer_name{
+        margin-left:1.5em;
+    }
+
+   .location-selected{
+         margin-left: 3rem;
+
+    }
+}
+
+@media(min-width:25em){
+       .grid-col-4of10-addcart{
+        width:70%;
+        
+    }
+
+    div.grid-col-4of10-addcart.save-chef{
+        margin-left:2em;
+        margin-bottom:1em;
+    }
+}
+
 @media(min-width:28.81em){
     .grid-col-5of10-card-information{
         width:100%;
