--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -75,6 +75,11 @@
         font-family: 'Abel', 'Helvetica', 'Arial', sans-serif;
     }
 
+    h2.chef-name-expanded{
+        font-size: 3em;
+        border-bottom: solid white;
+    }
+
     h1.steps{
         margin-top:0.6em;
     }
@@ -245,29 +250,7 @@
     .underline{
          border-bottom: 0.1em solid white;
     }
-    /*
-    .chef-border:hover{
-        position:absolute;
-        float:left;
-        color:black;
-        width:400%;
-        z-index:20;
-
-    }
-
-    /* mobile navigation for next week
-    .mobile-nav, .mobile-nav-dropdown{
-        display:block;
-        background-color:black;
-        padding:1em 0;
-        text-align:center;
-        text-decoration: none;
-        border-bottom: 0.02em solid black;
-        width:100%;
-     }
-
-     */
-
+    
     /*purchase page styling*/
 
     /*Styling for columns: purchase webpage*/
@@ -661,12 +644,16 @@
     }
 
 
-    .chef-img{
+    .chef-img, .chef-img-expanded{
         float:right;
         width:100%;
         height:auto;
         background-color: #000000;
         opacity: 0.8;
+    }
+
+    .chef-img-expanded{
+            opacity:1;
     }
 
     .chef-img:hover{
@@ -777,3 +764,25 @@
         text-align: center;
     }
 
+/*expaned page*/
+.cuisine-type{
+    font-size: 1.2em;
+    margin-top: -1em;
+  
+}
+.available-time{
+    margin-top: -1em;
+ 
+}
+
+.like-the-chef{
+    margin-top: -2.6em;
+    margin-left: 7rem;
+    
+}
+
+.chef-information-expanded{
+    width:27%;
+    margin-left:3rem;
+  
+}
