--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -294,7 +294,9 @@
     }
 
     .calendar{
-        margin-right:8rem;
+    margin-right: 12rem;
+    margin-top: -1rem;
+    margin-bottom: 0.8rem;
     }
     /*Styling image area, fill and buttom: purchase webpage*/
 
@@ -331,7 +333,7 @@
         padding:1rem;
         width:100%;
         height:5%;
-        margin-top:1rem;
+      
 
 
     }
@@ -770,6 +772,13 @@
     margin-top: -1em;
   
 }
+
+.cuisine-type-save{
+    font-size: 1em;
+    margin-top: -1em;
+  
+}
+
 .available-time{
     margin-top: -1em;
  
@@ -785,4 +794,10 @@
     width:27%;
     margin-left:3rem;
       
+}
+
+div.grid-col-4of10-addcart.save-chef{
+ margin-top: -0.7em;
+    margin-left: -2em;
+
 }
