--- a/Template_Structure/css/grid.css
+++ b/Template_Structure/css/grid.css
@@ -446,6 +446,18 @@ ul.cheflist.columns-4 li {
     }
 }
 
+@media(max-width: 52em){
+    
+    .aboutList{
+        margin: 0rem 2rem 0rem -2rem;
+    }
+    
+    .default-buttom floatLeft {
+        margin: 0rem 0rem 10rem 0rem;
+        padding-bottom: 5rem;
+    }
+}
+
 
 /*Responsive Text: upcomging events and homepage*/
 
